Check Resonance also on ANALYSIS Screen